RCP: Bugreport window restructured; Refactoring
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@22122 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: a0db80661dd7929b79fc3a62be220ca24c31b59e